--- a/bwmcnew/Site.Mobile.Master
+++ b/bwmcnew/Site.Mobile.Master
@@ -25,7 +25,7 @@
 </head>
 <body>    
       <header class="main-header">
-        <nav id="navbarMain" class="navbar navbar-expand-lg navbar-light fixed-top">
+        <nav id="navbarMain" class="navbar navbar-expand-lg navbar-light fixed-top dp-mobile">
             <div class="container">
                 <a class="ctm-navbar-brand" href="/">
                     <img src="assets/images/logo.png" alt=""></a>
@@ -41,14 +41,10 @@
                     <ul id="main-nav" class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item active"><a class="nav-link" aria-current="page" href="/">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
-                       <%-- <li class="nav-item"><a class="nav-link" href="/management-accounting">Management</a></li>--%>
-                        <%--<li class="nav-item"><a class="nav-link" href="">Careers</a></li>
-                        <li class="nav-item"><a class="nav-link" href="">Projects</a></li>
-                        <li class="nav-item"><a class="nav-link" href="">Services</a></li>--%>
-                       
                       
                          <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="/services" id="navbarDropdown" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                        <%--<a class="nav-link dropdown-toggle" href="/services" id="navbarDropdown" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">--%>
+                        <a class="nav-link dropdown-toggle" href="/services" id="navbarDropdown" role="button" data-toggle="dropdown"   aria-expanded="false">
                         Services
                       </a>
                    <%--   <a class="nav-link dropdown-toggle" href="/services" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
